--- a/lectures/03-safety.tex
+++ b/lectures/03-safety.tex
@@ -170,7 +170,7 @@ We now know everything that we need to write programs in our simple imperative c
 Recall from the previous lecture that we defined the semantics of propositional logic to assign values of either true or false to formulas, given an interpretation $I$ that maps all the atomic propositions (i.e., variables) to true/false values. Our intuition about programs tells us that they do not map to true/false values, but rather execute to change the state of a machine until they (hopefully) terminate. For example, a program consisting of the assignment \(\pupdate{\pumod{x}{x+1}}\) will move from an initial state $\iget[state]{\I}$ to a new state $\iget[state]{\It}$ that has a different value for the variable $x$, namely exactly such that \(\iget[state]{\It}(x)=\iget[state]{\I}+1\) while no other variables change their value.
 
 We formalize a program state $\iget[state]{\I}$ as a function assigning an integer value in $\integers$ to every variable.
-The set of all states is denoted \(\linterpretations{\Sigma}{V}\). In addition, we will assume that \(\linterpretations{\Sigma}{V}\) contains a special error state \errstate. For example, a program might end up in the error state after attemption to divide by zero (in case our language supported division), or after executing a failed assertion command. The special state \errstate does not map values for any variables, so no terms can be evaluated in it and no program can continue executing from \errstate.
+The set of all states is denoted \(\linterpretations{\Sigma}{V}\). In addition, we will assume that \(\linterpretations{\Sigma}{V}\) contains a special error state \errstate. For example, a program might end up in the error state after attempting to divide by zero (in case our language supports division), or after executing a failed assertion command. The special state \errstate does not map values for any variables, so no terms can be evaluated in it and no program can continue executing from \errstate.
 
 The value that a term $\astrm$ has in a state $\iget[state]{\I}$ is written \(\ivaluation{\I}{\astrm}\) and defined by simply evaluating when using the concrete (integer) values that the state $\iget[state]{\I}$ provides for all the variables in term $\astrm$.
 \begin{definition}[Semantics of terms]
